assets/css/style.css
/* ... */
.left__group__footer{
    width: 50rem;
}

.company__info__group{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.company__info__group img{
    width: 10rem;
}

.company__info__desc{
    font-size: 14px;
    font-weight: 500;
    width: 20rem;
}

.company__info__socmed{
    display: flex;
    flex-direction: row;
}

.company__info__socmed div{
    margin-right: 1rem;
    font-size: 16px;
}

.right__group__footer{
    padding: 2rem 0rem;
}

.nav__list__group ul li{
    list-style: none;
    margin-top: 1rem;
}

.title__nav{
    font-size: 18px;
    font-weight: 700;
}

.nav__list__group ul li a{
    color: #333333;
    font-weight: 500;
    font-size: 16px;
}

.nav__list__group ul li a:hover{
    color: #3391e7 !important;
}

.footer__small__text__group{
    border-top: 1px solid #33333384;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.footer__small__text__right{
    display: flex;
    flex-direction: row;
}

.footer__small__text__right a{
    margin-left: 3rem;
    color: #333333;
    font-weight: 500;
}

.footer__small__text__right a:hover{
    color: #3391e7 !important;
}



@media (max-width:1399px){
    .left__group__footer{
        width: 40rem;
    }
}

@media (max-width:1199px){
    .left__group__footer{
        width: 30rem;
    }
}

@media (max-width:991px){
    .footer__group{
        flex-direction: column;
        justify-content: space-between;
    }
    .company__info__desc{
        width: 30rem;
    }
    .title__nav{
        font-size: 16px;
    }
    .nav__list__group ul li a{
        font-size: 14px;
    }
}

@media (max-width:767px){
    .title__nav{
        font-size: 14px;
    }
    .nav__list__group ul li a{
        font-size: 12px;
    }
    .nav__list__group ul{
        padding-left: 1rem !important;
    }
}

@media (max-width:575px){
    .company__info__desc{
        width: 25rem;
    }
    .title__nav{
        font-size: 12px;
    }
    .nav__list__group ul li a{
        font-size: 10px;
    }
}




/* Footer Section */

